# quantTrading

./: .gitignore  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  run_quant.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-pages-demo.yml
config/: example_config.json  sample_config.json
data/: sample_broker_fills.csv  sample_cboe_vix.csv  sample_ccm_link.csv  sample_compustat_quarterly.csv  sample_crsp_daily.csv  sample_ff_factors.csv  sample_fmp_grades.csv  sample_fred_dgs10.csv  sample_ibes_link.csv  sample_ibes_summary.csv  sample_ibes_surprise.csv  sample_kpss_patent.csv
docs/: commercial_readiness.md  config_reference.md  data_sources_and_compliance.md  index.html  operations_runbook.md  output_reference.md  wrds_workflow.md
sql/wrds/: 01_compustat_quarterly.sql  02_ccm_link.sql  03_crsp_daily.sql  04_ibes_link_template.sql  05_ibes_summary_template.sql  06_ibes_surprise_template.sql  07_kpss_patent_template.sql  08_ff_factors_template.sql
src/quant_research/: __init__.py  __main__.py  backtest.py  cache.py  config.py  data_models.py  data_sources.py  doctor.py  doctor_report.py  execution.py  exports.py  gallery.py  main.py  manifest.py  pipeline.py  publishing.py  reporting.py  research.py  strategy.py  utils.py  validation.py  wrds_runner.py
tests/: __init__.py  test_backtest_controls.py  test_cache.py  test_cli_upgrades.py  test_config_upgrades.py  test_data_sources.py  test_distribution_artifacts.py  test_doctor.py  test_execution.py  test_gallery.py  test_manifest.py  test_module_entrypoint.py  test_orders.py  test_path_overrides.py  test_pipeline_liquidity.py  test_pipeline_normalization.py  test_publishing.py  test_reporting.py  test_research.py  test_shorting.py  test_strategy.py  test_strategy_weighting.py  test_universe.py  test_utils_upgrades.py  test_validation.py  test_wrds_runner.py
