[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research-stack"
version = "0.1.0"
description = "WRDS, FRED, Cboe VIX, and FMP based quant trading scaffold."
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
