[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-research-stack"
dynamic = ["version"]
description = "Local-first quant research and backtesting toolkit."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
keywords = ["backtesting", "equities", "finance", "quant", "research"]
license = {text = "Proprietary"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = [
    "build>=1,<2",
    "pytest>=8,<9",
]

[project.scripts]
quant-research = "quant_research.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.dynamic]
version = {attr = "quant_research.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quant_research = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["quant_research"]

[tool.coverage.report]
skip_covered = true
show_missing = true
